--- a/src/app/pages/register/register.page.html
+++ b/src/app/pages/register/register.page.html
@@ -1,13 +1,19 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>register</ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">register</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content>
+  <div class="register">
+    <div class="register__container">
+      <div class="register__title">
+        <h3>Happy to see you</h3>
+        <h1>Create a <br />New account</h1>
+      </div>
+      <form action="" class="register_form">
+        <ion-input type="text" placeholder="Username"></ion-input>
+        <ion-input type="email" placeholder="Email"></ion-input>
+        <ion-input type="password" placeholder="Password"></ion-input>
+        <ion-button type="submit"> register </ion-button>
+      </form>
+      <div class="register__redirect">
+        Don't have an account? <a routerLink="/login">SingIn</a>
+      </div>
+    </div>
+  </div>
 </ion-content>
