--- a/src/app/pages/detail/detail.page.scss
+++ b/src/app/pages/detail/detail.page.scss
@@ -4,12 +4,36 @@
     position: absolute;
     top: 10px;
     left: 10px;
+    z-index: 1;
   }
   .detail__container {
-    img {
-      width: 100%;
-      height: 280px;
-      object-fit: cover;
+    .detail__image {
+      position: relative;
+      img {
+        width: 100%;
+        height: 280px;
+        object-fit: cover;
+      }
+      .play-video {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+        right: 0;
+
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        z-index: 1;
+
+        ion-icon {
+          font-size: 50px;
+          color: #515151;
+          background: #ff8e76;
+          border-radius: 50%;
+        }
+      }
     }
     .detail__content {
       padding: 24px;
@@ -58,6 +82,10 @@
             letter-spacing: 0.24px;
           }
         }
+      }
+      .top-cast {
+        padding: 16px 0;
+        border-top: 1px solid #ccc;
       }
       .detail-group {
         display: flex;
