--- a/src/app/components/card-movie/card-movie.component.html
+++ b/src/app/components/card-movie/card-movie.component.html
@@ -15,7 +15,9 @@
   </div>
   <div class="movieCard__content">
     <div>
-      <h2 class="movieCard__title">{{ dataMovie.original_title }}</h2>
+      <h2 class="movieCard__title">
+        {{ !search ? dataMovie.original_title : dataMovie.original_name }}
+      </h2>
       <div class="movieCard__release_date">{{ dataMovie.release_date }}</div>
     </div>
     <div class="flex-col">
