--- a/src/app/pages/detail/detail.page.html
+++ b/src/app/pages/detail/detail.page.html
@@ -1,7 +1,7 @@
 <ion-content *ngIf="isLoading">
   <div class="detail">
     <div class="detail__container">
-      <div class="detail__image">
+      <div class="detail__videos">
         <ion-skeleton-text
           [animated]="true"
           style="width: 100%; height: 280px"
@@ -41,6 +41,12 @@
       </div>
     </div>
   </div>
+  <div class="related">
+    <ion-skeleton-text
+      [animated]="true"
+      style="width: 100%; height: 250px"
+    ></ion-skeleton-text>
+  </div>
 </ion-content>
 
 <ion-content *ngIf="!isLoading">
@@ -55,15 +61,21 @@
       <ion-icon name="arrow-back-outline"></ion-icon>
     </ion-button>
     <div class="detail__container">
-      <div class="detail__image">
-        <img
-          [src]="bareImageUrl 
-        + '/w500' + dataDetail?.poster_path"
-          alt=""
-        />
-        <div class="play-video">
-          <ion-icon name="play-circle-outline"></ion-icon>
+      <div class="detail__videos">
+        <div class="detail__image" *ngIf="!showVideo">
+          <img
+            [src]="bareImageUrl 
+          + '/w500' + dataDetail?.poster_path"
+            alt=""
+          />
+          <div class="play-video" (click)="handleShowVideo()">
+            <ion-icon name="play-circle-outline"></ion-icon>
+          </div>
         </div>
+        <youtube-player
+          *ngIf="showVideo"
+          [videoId]="dataVideo.length > 0 ? dataVideo[0].key :  'sdEU-t3uEM4'"
+        ></youtube-player>
       </div>
       <div class="detail__content">
         <div class="title">
