--- a/src/app/pages/detail/detail.page.scss
+++ b/src/app/pages/detail/detail.page.scss
@@ -4,14 +4,22 @@
     position: absolute;
     top: 10px;
     left: 10px;
-    z-index: 1;
+    z-index: 2;
   }
   .detail__container {
     .detail__image {
       position: relative;
+      width: 100%;
+      max-height: 300px;
+      overflow: hidden;
+      youtube-player {
+        width: 100%;
+        height: 100%;
+      }
+
       img {
         width: 100%;
-        height: 280px;
+        height: 100%;
         object-fit: cover;
       }
       .play-video {
@@ -162,5 +170,15 @@
         }
       }
     }
+  }
+}
+::ng-deep youtube-player {
+  iframe {
+    border-top-width: 0px;
+    border-bottom-width: 0px;
+    border-left-width: 0px;
+    border-right-width: 0px;
+    width: 100%;
+    height: 300px;
   }
 }
