--- a/src/app/pages/register/register.page.html
+++ b/src/app/pages/register/register.page.html
@@ -9,7 +9,7 @@
         <ion-input type="text" placeholder="Username"></ion-input>
         <ion-input type="email" placeholder="Email"></ion-input>
         <ion-input type="password" placeholder="Password"></ion-input>
-        <ion-button type="submit"> register </ion-button>
+        <ion-button type="submit"> Register </ion-button>
       </form>
       <div class="register__redirect">
         Don't have an account? <a routerLink="/login">SingIn</a>
