--- a/src/app/pages/register/register.page.scss
+++ b/src/app/pages/register/register.page.scss
@@ -1,8 +1,9 @@
 ion-content {
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
 
   .register {
+    background: url(../../../assets/image/banner.jpeg);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -12,9 +13,9 @@ ion-content {
     height: 100%;
     margin: 0;
     padding: 0;
-    background: url(../../../assets/image/banner.jpeg);
     object-fit: cover;
     position: relative;
+    overflow: hidden;
     &::after {
       position: absolute;
       content: "";
