--- a/src/app/pages/login/login.page.scss
+++ b/src/app/pages/login/login.page.scss
@@ -75,6 +75,7 @@ ion-content {
         text-align: center;
         font-size: 16px;
         font-weight: 700;
+        color: #fff;
         a {
           color: red;
         }
