--- a/src/app/pages/tabs/tabs.page.html
+++ b/src/app/pages/tabs/tabs.page.html
@@ -14,7 +14,7 @@
         [color]="discover.selected ? 'gradient' : ''"
       ></ion-icon>
     </ion-tab-button>
-    <ion-tab-button tab="user" #user>
+    <ion-tab-button #user (click)="onShowModalUser()">
       <ion-icon
         size="large"
         [name]="user.selected ? 'person' : 'person-outline'"
