--- a/src/app/pages/intro/intro.page.scss
+++ b/src/app/pages/intro/intro.page.scss
@@ -36,7 +36,7 @@ ion-content {
         padding: 0;
         margin: 0;
         font-size: 50px;
-        color: var(--ion-color-dark);
+        color: #fff;
         font-weight: 700;
         span {
           color: red;
@@ -50,7 +50,7 @@ ion-content {
         position: absolute;
         bottom: 20%;
         .intro__desc {
-          color: var(--ion-color-dark);
+          color: #fff;
           font-size: 15px;
           font-weight: 500;
           line-height: 1.3;
@@ -61,10 +61,13 @@ ion-content {
           gap: 20px;
           .intro__button-signIn {
             --background: #e64b4b;
+            --color: #fff;
             background: #e64b4b;
+            color: #fff;
           }
           .intro__button-signInGoogle {
             background: #000000;
+            color: #fff;
           }
           ion-button {
             width: 100%;
