--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -5,11 +5,21 @@
         <h3>Welcome Back</h3>
         <h1>Please Login <br />To Continue</h1>
       </div>
-      <form action="" class="login_form">
-        <ion-input type="email" placeholder="Email"></ion-input>
+      <form class="login_form" [formGroup]="formLogin" (ngSubmit)="login()">
+        <ion-input
+          type="email"
+          placeholder="Email"
+          formControlName="email"
+        ></ion-input>
 
-        <ion-input type="password" placeholder="Password"></ion-input>
-        <ion-button type="submit" routerLink="/tabs/home"> Login </ion-button>
+        <ion-input
+          type="password"
+          placeholder="Password"
+          formControlName="password"
+        ></ion-input>
+        <ion-button type="submit" [disabled]="!formLogin.valid">
+          Login
+        </ion-button>
       </form>
       <div class="login__redirect">
         Don't have an account? <a routerLink="/register">SignUp</a>
