--- a/src/app/pages/register/register.page.html
+++ b/src/app/pages/register/register.page.html
@@ -5,10 +5,26 @@
         <h3>Happy to see you</h3>
         <h1>Create a <br />New account</h1>
       </div>
-      <form action="" class="register_form">
-        <ion-input type="text" placeholder="Username"></ion-input>
-        <ion-input type="email" placeholder="Email"></ion-input>
-        <ion-input type="password" placeholder="Password"></ion-input>
+      <form
+        [formGroup]="formRegister"
+        class="register_form"
+        (ngSubmit)="register()"
+      >
+        <ion-input
+          type="text"
+          placeholder="Username"
+          formControlName="username"
+        ></ion-input>
+        <ion-input
+          type="email"
+          placeholder="Email"
+          formControlName="email"
+        ></ion-input>
+        <ion-input
+          type="password"
+          placeholder="Password"
+          formControlName="password"
+        ></ion-input>
         <ion-button type="submit"> Register </ion-button>
       </form>
       <div class="register__redirect">
